# BayesOptim

./: .gitignore  README.md  enhanced vis idea  pyproject.toml
bayesoptim/: __init__.py  cli.py  config.py  optimizer.py
bayesoptim/models/: __init__.py  gp_model.py
bayesoptim/utils/: __init__.py  plotting.py
examples/: highdim_example.py  quickstart.py
tests/: test_basic.py
